--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@prisma/client": "^4.8.0",
     "@types/express": "^4.17.15",
+    "bson": "^4.7.0",
     "express": "^4.18.2"
   }
 }
