--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
+    "start": "concurrently \"npx tsc --watch\" \"nodemon index.ts\"",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q src/dist/index.js\""
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "@prisma/client": "^4.8.0",
     "@types/express": "^4.17.15",
     "bson": "^4.7.0",
+    "concurrently": "^7.6.0",
     "express": "^4.18.2"
   }
 }
