--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.11.18",
     "prisma": "^4.8.0",
     "ts-node": "^10.9.1",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "^4.8.0",
     "@types/express": "^4.17.15",
+    "bcrypt": "^5.1.0",
     "bson": "^4.7.0",
     "concurrently": "^7.6.0",
     "express": "^4.18.2"
